--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" alt="logo" class="logo"></a>
+        <a href="#"><img src="img/My project.png" alt="logo" class="logo" height="50vh"></a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="home.html">Home</a></li>
